# audiolat

./: .gitignore  LICENSE  Makefile  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/facebook/audiolat/: JavaAudio.java  JavaRecord.java  MainActivity.java  TestSettings.java  UsbMidi.java  utils.java
app/src/main/java/com/facebook/latencycheck/: MainActivity.java  TestSettings.java
app/src/main/jni/: Android.mk  CMakeLists.txt  aaudio.cpp  audiolat.cpp  latencycheck.cpp  oboe.cpp
app/src/main/res/layout/: activity_main.xml  activity_midi.xml
app/src/main/res/raw/: .directory  bp_noise2_16k_300ms.raw  bp_noise2_48k_300ms.raw  bp_noise2_8k_300ms.raw  chirp2.raw  chirp2_16k_300ms.raw  chirp2_48k_300ms.raw  chirp2_48k_300ms_m18db.raw  chirp2_8k_300ms.raw  chirp_16k_300ms.raw  chirp_48k_300ms.raw  chirp_8k_300ms.raw  noise_48k.raw  noise_8k.raw  start_signal.raw
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: device_filter.xml
gradle/wrapper/: gradle-wrapper.properties
script/: calc_delay.py  find_pulses.py  run_test.sh
scripts/: calc_delay.py  common.py  find_pulses.py  find_transient.py  parse_data.sh  playout.py  roundtrip.py  run_test.sh
